[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/LD51.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tree.gd" type="Script" id=2]
[ext_resource path="res://sounds/wood.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[node name="Tree" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 2.4, 2.4 )
polygon = PoolVector2Array( 8, -4, 8, 4, 4, 8, -4, 8, -8, 4, -8, -4, -4, -8, 4, -8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 88, 40, 40 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="finished" from="Hit" to="." method="_on_Hit_finished"]
